# mirrorctl

./: README.md  centroid.txt  config.md  constants.py  control_flows.py  fsm_obj.py  go_to_voltage_main.py  lab-notebook.md  main.py  picam.py  pid_mock_main.py  pyproject.toml  setup.py  setup_fsm.py  test_camera_distance_resolve.py  test_centroiding.py  voltage_mapping_interactive.py  voltage_mapping_main.py  voltage_mapping_main_v2.py  voltage_mapping_params.json  voltage_mapping_sweep_params.json
config/: CALIBRATION.md  __init__.py  calibrate_camera_interactive.py  calibrate_picam.py  camera_params.npz  get_calib_photos.py  preview_stream.py
old/: og_spi_test.py  voltage_mapping_main.py
runs/mapping/: voltage_mapping_out.csv  voltage_mapping_out_150v_ax_s1_n3_lowlight.csv  voltage_mapping_out_calibration_22mm_xaxis_st0.01_nocharuco_roi20_2.csv  voltage_mapping_out_calibration_RAW_1.csv  voltage_mapping_out_calibration_RAW_RAW_2.csv  voltage_mapping_out_calibration_RAW_RAW_RAW_2.csv  voltage_mapping_out_diagnose_xaxis_1.csv  voltage_mapping_out_diagnose_xaxis_settlingtime_2.csv  voltage_mapping_out_diagnose_xaxis_st0.01_nocharuco_centroid2_1.csv  voltage_mapping_out_diagnose_yaxis_1.csv  voltage_mapping_out_diagnose_yaxis_st0.01_nocharuco_1.csv  (+2 more)
services/: __init__.py  calibration_service.py  fsm_service.py  mapping_service.py
src/: __init__.py  centroiding.py  constants.py  exceptions.py  fsm_angular.py  fsm_obj.py  fsm_types.py  pi_hardware_adapter.py  picam.py  picam_qpd_centroid.py  pid_helpers.py  setup_fsm.py  voltage_helpers.py
tests/: conftest.py  test_fsm_angular.py  test_pid_helpers.py  test_tui_smoke.py  test_voltage_helpers.py  tests.py
tools/: __init__.py  compare_camera_params.py  diagnose_camera_distance.py  diagnose_centroid.py  test_camera.py
tui/: __init__.py  __main__.py  app.py
(+66 files in other folders)
